# limited-memory-tape-sorter

./: CMakeLists.txt  README.md  config.example.txt
.github/workflows/: ci.yml
include/: FileTape.hpp  ITape.hpp  SortReport.hpp  SortedTapePart.hpp  TapeConfig.hpp  TapeSorter.hpp  TapeVerifier.hpp  TemporaryTapeCleaner.hpp
src/: FileTape.cpp  TapeConfig.cpp  TapeSorter.cpp  TapeVerifier.cpp  TemporaryTapeCleaner.cpp  main.cpp
tests/: FileTapeTests.cpp  TapeConfigTests.cpp  TapeSorterTests.cpp  TapeVerifierTests.cpp  TemporaryTapeCleanerTests.cpp
tests/integration/: sort_cli.py
